# ROS-Robotics-Project-2

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: amcl.xml  gmapping.xml
launch/: amcl.launch  gmapping.launch  scan_merger.launch
maps/: map1.pgm  map1.yaml  map10.yaml  map11.yaml  map12.pgm  map12.yaml  map3.pgm  map3.yaml
rviz/: amcl_cfg.rviz  map_cfg.rviz
scripts/: trajectory_map.py
src/: odom_tf2.cpp  odometry.cpp  trajectory_map.py
